# matrices-py

./: LICENSE  README.md  pyproject.toml
matrices/: __init__.py  matrix.py
src/matrix/: matrix.py
tests/: test_matrix.py
