[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matrices-py"
version = "0.0.3"
authors = [
    {name = "Ugo Brocard", email="ugo.brocard.official+contact@gmail.com"},
]
description = "Python Matrices Utilities"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://www.github.com/ugo-brocard/matrices-py"